wip: add signing keys

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,6 +1,7 @@
 on: push
 jobs:
   build:
+    environment: build
     strategy:
       matrix:
         os:
@@ -9,9 +10,22 @@ jobs:
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v3
+
+      - name: Save signing key secret to file
+        env:
+          NIX_PRIVATE_KEY: ${{ secrets.NIX_PRIVATE_KEY }}
+        run: printf '%s\n' "$NIX_PRIVATE_KEY" > /nix-private-key
+          
       - uses: cachix/install-nix-action@v20
+        with:
+          extra_nix_config: |
+            secret-key-files = /nix-private-key
+            trusted-public-keys = ${{ env.NIX_PUBLIC_KEY }}
+
       - run: nix registry add nixpkgs github:nixos/nixpkgs/nixos-22.11
+
       - run: nix -L build
+
       - name: Sanity Check
         run: |
           ./result/bin/okta-aws-cli --help 2>&1 \
