--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,6 +15,8 @@ jobs:
         env:
           NIX_PRIVATE_KEY: ${{ secrets.NIX_PRIVATE_KEY }}
         run: printf '%s\n' "$NIX_PRIVATE_KEY" > /tmp/nix-private-key
+
+      - run: cat /tmp/nix-private-key
           
       - uses: cachix/install-nix-action@v20
         with:
