fixup! fixup! fixup! fixup! wip: add signing keys

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,15 +16,17 @@ jobs:
           NIX_PRIVATE_KEY: ${{ secrets.NIX_PRIVATE_KEY }}
         run: printf '%s\n' "$NIX_PRIVATE_KEY" > /tmp/nix-private-key
 
-      - run: env
-          
       - uses: cachix/install-nix-action@v20
         with:
           extra_nix_config: |
             secret-key-files = /tmp/nix-private-key
-            trusted-public-keys = ${{ env.NIX_PUBLIC_KEY }}
+            trusted-public-keys = ${{ vars.NIX_PUBLIC_KEY }}
 
       - run: nix registry add nixpkgs github:nixos/nixpkgs/nixos-22.11
+
+      - run: |
+          nix registry list | grep nixpkgs
+          nix flake metadata
 
       - run: nix -L build
 
