--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,13 +28,13 @@ jobs:
             secret-key-files = /tmp/nix-private-key
             trusted-public-keys = cache.nixos.org-1:6NCHdD59X431o0gWypbMrAURkbJ16ZPMQFGspcDShjY= ${{ vars.NIX_PUBLIC_KEY }}
 
-      - run: cat /etc/nix/nix.conf
-
       - name: Import Nix store cache
         if: steps.nix-cache.outputs.cache-hit == 'true'
         run: nix copy --from /tmp/nix-cache .
 
       - run: nix -L build
+
+      - run: nix path-info -r . | xargs -n1 nix path-info --sigs
 
       - name: Sanity Check
         run: |
