fixup! print signatures

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,7 +34,10 @@ jobs:
 
       - run: nix -L build
 
-      - run: nix path-info -r . | xargs -n1 nix path-info --sigs
+      - run: |
+          nix path-info -r . | xargs -n1 nix path-info --sigs
+          nix store repair -r .
+          nix path-info -r . | xargs -n1 nix path-info --sigs
 
       - name: Sanity Check
         run: |
