--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,30 +14,25 @@ jobs:
       - uses: actions/cache@v3
         id: nix-cache
         with:
-          path: /tmp/nix-cache
+          path: ${{ env.RUNNER_TEMP }}/nix-cache
           key: ${{ runner.os }}-${{ hashFiles('./flake.lock') }}
 
       - name: Save signing key secret to file
         env:
           NIX_PRIVATE_KEY: ${{ secrets.NIX_PRIVATE_KEY }}
-        run: printf '%s\n' "$NIX_PRIVATE_KEY" > /tmp/nix-private-key
+        run: printf '%s\n' "$NIX_PRIVATE_KEY" > "$RUNNER_TEMP"/nix-private-key
 
       - uses: cachix/install-nix-action@v20
         with:
           extra_nix_config: |
-            secret-key-files = /tmp/nix-private-key
+            secret-key-files = ${{ env.RUNNER_TEMP }}/nix-private-key
             trusted-public-keys = cache.nixos.org-1:6NCHdD59X431o0gWypbMrAURkbJ16ZPMQFGspcDShjY= ${{ vars.NIX_PUBLIC_KEY }}
 
       - name: Import Nix store cache
         if: steps.nix-cache.outputs.cache-hit == 'true'
-        run: nix copy --from /tmp/nix-cache .
+        run: nix copy --from "$RUNNER_TEMP"/nix-cache .
 
       - run: nix -L build
-
-      - run: |
-          nix path-info -r . | xargs -n1 nix path-info --sigs
-          sudo $(command -v nix) store repair -r .
-          nix path-info -r . | xargs -n1 nix path-info --sigs
 
       - name: Sanity Check
         run: |
@@ -46,4 +41,6 @@ jobs:
 
       - name: Export Nix store cache
         if: steps.nix-cache.outputs.cache-hit != 'true'
-        run: nix copy --to /tmp/nix-cache .
+        run: |
+          sudo $(command -v nix) store repair -r .
+          nix copy --to "$RUNNER_TEMP"/nix-cache .
