--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,23 +14,23 @@ jobs:
       - uses: actions/cache@v3
         id: nix-cache
         with:
-          path: ${{ vars.RUNNER_TEMP }}/nix-cache
+          path: /home/nix-cache
           key: ${{ runner.os }}-${{ hashFiles('./flake.lock') }}
 
       - name: Save signing key secret to file
         env:
           NIX_PRIVATE_KEY: ${{ secrets.NIX_PRIVATE_KEY }}
-        run: printf '%s\n' "$NIX_PRIVATE_KEY" > "$RUNNER_TEMP"/nix-private-key
+        run: printf '%s\n' "$NIX_PRIVATE_KEY" > /tmp/nix-private-key
 
       - uses: cachix/install-nix-action@v20
         with:
           extra_nix_config: |
-            secret-key-files = ${{ vars.RUNNER_TEMP }}/nix-private-key
+            secret-key-files = /tmp/nix-private-key
             trusted-public-keys = cache.nixos.org-1:6NCHdD59X431o0gWypbMrAURkbJ16ZPMQFGspcDShjY= ${{ vars.NIX_PUBLIC_KEY }}
 
       - name: Import Nix store cache
         if: steps.nix-cache.outputs.cache-hit == 'true'
-        run: nix copy --from "$RUNNER_TEMP"/nix-cache .
+        run: nix copy --from /home/nix-cache .
 
       - run: nix -L build
 
@@ -43,4 +43,4 @@ jobs:
         if: steps.nix-cache.outputs.cache-hit != 'true'
         run: |
           sudo $(command -v nix) store repair -r .
-          nix copy --to "$RUNNER_TEMP"/nix-cache .
+          nix copy --to /home/nix-cache .
