--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,7 +15,7 @@ jobs:
         id: nix-cache
         with:
           path: ${{ runner.temp }}/nix-cache
-          key: ${{ runner.os }}-${{ hashFiles('./flake.lock') }}-1
+          key: ${{ runner.os }}-${{ hashFiles('./flake.lock') }}-2
 
       - name: Save signing key secret to file
         env:
@@ -28,9 +28,17 @@ jobs:
             secret-key-files = ${{ runner.temp }}/nix-private-key
             trusted-public-keys = cache.nixos.org-1:6NCHdD59X431o0gWypbMrAURkbJ16ZPMQFGspcDShjY= ${{ vars.NIX_PUBLIC_KEY }}
 
+      - run: sudo $(command -v nix) store repair --all
+
       - name: Import Nix store cache
         if: steps.nix-cache.outputs.cache-hit == 'true'
         run: nix copy --derivation --from ${{ runner.temp }}/nix-cache .
+
+      - name: Configure Nix post-build hook
+        if: steps.nix-cache.outputs.cache-hit != 'true'
+        run:
+          printf 'post-build-hook = %s\n' "$GITHUB_WORKSPACE"/.github/nix-post-build-hook >>/etc/nix/nix.conf
+          printf '${{ runner.temp }}\n' >"$GITHUB_WORKSPACE"/.github/cache_location
 
       - run: nix -L build
 
@@ -38,9 +46,3 @@ jobs:
         run: |
           ./result/bin/okta-aws-cli --help 2>&1 \
             | grep -wF -- '--all-profiles'
-
-      - name: Export Nix store cache
-        if: steps.nix-cache.outputs.cache-hit != 'true'
-        run: |
-          sudo $(command -v nix) store repair -r .
-          nix copy --derivation --to ${{runner.temp }}/nix-cache .
