--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,7 +6,7 @@ jobs:
       matrix:
         os:
           - ubuntu-latest
-          - macos-latest
+            # - macos-latest
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v3
@@ -35,7 +35,8 @@ jobs:
       - name: Configure Nix post-build hook
         if: steps.nix-cache.outputs.cache-hit != 'true'
         run:
-          printf 'post-build-hook = %s\n' "$GITHUB_WORKSPACE"/.github/nix-post-build-hook >>/etc/nix/nix.conf
+          printf 'post-build-hook = %s\n' "$GITHUB_WORKSPACE"/.github/nix-post-build-hook \
+            sudo tee -a /etc/nix/nix.conf >/dev/null
           printf '${{ runner.temp }}\n' >"$GITHUB_WORKSPACE"/.github/cache_location
 
       - run: nix -L build
