--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,8 +36,10 @@ jobs:
         if: steps.nix-cache.outputs.cache-hit != 'true'
         run:
           printf 'post-build-hook = %s\n' "$GITHUB_WORKSPACE"/.github/nix-post-build-hook \
-            sudo tee -a /etc/nix/nix.conf >/dev/null
+            | sudo tee -a /etc/nix/nix.conf >/dev/null
           printf '${{ runner.temp }}\n' >"$GITHUB_WORKSPACE"/.github/cache_location
+
+      - run: tail -n+0 /etc/nix/nix.conf "$GITHUB_WORKSPACE"/.github/cache_location
 
       - run: nix -L build
 
