--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,12 +35,15 @@ jobs:
       - name: Configure Nix post-build hook
         if: steps.nix-cache.outputs.cache-hit != 'true'
         run:
+          set -x &&
           declare -p GITHUB_WORKSPACE &&
           printf 'post-build-hook = %s\n' "$GITHUB_WORKSPACE"/.github/nix-post-build-hook \
-            | sudo tee -a /etc/nix/nix.conf >/dev/null \
-          && printf '${{ runner.temp }}\n' >"$GITHUB_WORKSPACE"/.github/cache_location
+            | sudo tee -a /etc/nix/nix.conf \
+          && printf '${{ runner.temp }}/nix-cache\n' >"$GITHUB_WORKSPACE"/.github/cache_location
 
       - run: tail -n+0 /etc/nix/nix.conf "$GITHUB_WORKSPACE"/.github/cache_location
+
+      - run: false
 
       - run: nix -L build
 
