fixup! fixup! fixup! fixup! fixup! fixup! fixup! fixup! fixup! fixup! Use nix post build hook

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,6 +42,7 @@ jobs:
       - run: ls -al ${{ runner.temp }}/nix-cache
       - run: nix -L build
       - run: ls -al ${{ runner.temp }}/nix-cache
+      - run: cat /tmp/nix-post-build-hook.log
 
       - name: Sanity Check
         run: |
