--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,21 +19,18 @@ jobs:
 
       - name: Configure Nix post-build hook
         if: steps.nix-cache.outputs.cache-hit != 'true'
-        run: printf '${{ runner.temp }}/nix-cache\n' >${{ github.workspace }}/.github/cache_location
+        run: printf 'file://%s/nix-cache\n' '${{ runner.temp }}' >'${{ github.workspace }}/.github/cache_location'
 
       - name: Save signing key secret to file
-        run: printf '${{ secrets.NIX_PRIVATE_KEY }}\n' >${{ runner.temp }}/nix-private-key
+        run: printf '${{ secrets.NIX_PRIVATE_KEY }}\n' >'${{ runner.temp }}/nix-private-key'
 
       - uses: cachix/install-nix-action@v20
         with:
           extra_nix_config: |
+            extra-substituters = file://${{ runner.temp }}/nix-cache
             post-build-hook = ${{ github.workspace }}/.github/nix-post-build-hook
             secret-key-files = ${{ runner.temp }}/nix-private-key
             trusted-public-keys = cache.nixos.org-1:6NCHdD59X431o0gWypbMrAURkbJ16ZPMQFGspcDShjY= ${{ vars.NIX_PUBLIC_KEY }}
-
-      - name: Import Nix store cache
-        if: steps.nix-cache.outputs.cache-hit == 'true'
-        run: nix copy --derivation --from ${{ runner.temp }}/nix-cache .
 
       - run: ls -al ${{ runner.temp }}/nix-cache || true
       - run: nix -L build
