--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,10 +17,6 @@ jobs:
           path: ${{ runner.temp }}/nix-cache
           key: ${{ runner.os }}-${{ hashFiles('./flake.lock') }}-2
 
-      - name: Configure Nix post-build hook
-        if: steps.nix-cache.outputs.cache-hit != 'true'
-        run: printf 'file://%s/nix-cache\n' '${{ runner.temp }}' >'${{ github.workspace }}/.github/cache_location'
-
       - name: Save signing key secret to file
         run: printf '${{ secrets.NIX_PRIVATE_KEY }}\n' >'${{ runner.temp }}/nix-private-key'
 
@@ -40,3 +36,12 @@ jobs:
         run: |
           ./result/bin/okta-aws-cli --help 2>&1 \
             | grep -wF -- '--all-profiles'
+
+      - name: Copy built derivations to cache
+        if: steps.nix-cache.outputs.cache-hit != 'true'
+        shell: bash
+        run: |
+          set -x
+          set -f
+          sudo $(command -v) nix store repair -r . \
+            && nix copy --to file://${ runner.temp }}/nix-cache $(<${{ github.workspace }}/.github/built_paths)
