--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,7 +15,13 @@ jobs:
         id: nix-cache
         with:
           path: ${{ runner.temp }}/nix-cache
-          key: ${{ runner.os }}-${{ hashFiles('./flake.lock') }}-3
+          key: ${{ runner.os }}-${{ hashFiles('./flake.lock') }}-2
+
+      - uses: actions/cache@v3
+        id: go-cache
+        with:
+          path: ${{ runner.temp }}/nix-cache
+          key: ${{ runner.os }}-${{ hashFiles('./gomod2nix.toml') }}
 
       - name: Save signing key secret to file
         run: printf '${{ secrets.NIX_PRIVATE_KEY }}\n' >'${{ runner.temp }}/nix-private-key'
@@ -23,25 +29,30 @@ jobs:
       - uses: cachix/install-nix-action@v20
         with:
           extra_nix_config: |
-            extra-substituters = file://${{ runner.temp }}/nix-cache
-            post-build-hook = ${{ github.workspace }}/.github/nix-post-build-hook
+            extra-substituters = file://${{ runner.temp }}/nix-cache file://${{ runner.temp }}/go-cache
             secret-key-files = ${{ runner.temp }}/nix-private-key
             trusted-public-keys = cache.nixos.org-1:6NCHdD59X431o0gWypbMrAURkbJ16ZPMQFGspcDShjY= ${{ vars.NIX_PUBLIC_KEY }}
 
-      - run: ls -al ${{ runner.temp }}/nix-cache || true
       - run: nix -L build
-      - run: ls -al ${{ runner.temp }}/nix-cache || true
 
       - name: Sanity Check
         run: |
           ./result/bin/okta-aws-cli --help 2>&1 \
             | grep -wF -- '--all-profiles'
 
-      - name: Copy built derivations to cache
-        if: steps.nix-cache.outputs.cache-hit != 'true'
-        shell: bash
+      - name: Resolve Nix dependencies
         run: |
-          set -x
-          set -f
-          sudo $(command -v) nix store repair -r . \
-            && nix copy --to file://${ runner.temp }}/nix-cache $(<${{ github.workspace }}/.github/built_paths)
+          sudo $(command -v nix) store repair -r . \
+            && nix path-info -r --derivation . | grep -v '\.drv' | sort >all_deps.txt \
+            && nix path-info -r .#packages.$(nix eval --impure --expr 'builtins.currentSystem').default.passthru.vendorEnv | sort >go_deps.txt
+
+      - name: Copy Nix dependencies to cache
+        if: steps.nix-cache.outputs.cache-hit != 'true'
+        run: |
+          comm -23 all_deps.txt go_deps.txt \
+            | xargs nix copy --to file://${ runner.temp }}/nix-cache
+
+      - name: Copy go dependencies to cache
+        if: steps.go-cache.outputs.cache-hit != 'true'
+        run: |
+          xargs nix copy --to file://${ runner.temp }}/go-cache <go_deps.txt
