fixup! Revert to post-build hook

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,4 +39,4 @@ jobs:
         if: steps.nix-cache.outputs.cache-hit != 'true'
         run: |
           sudo $(command -v nix) store repair -r .
-          xargs nix copy --to file://${{ runner.temp }}/nix-cache <'${{ github.workspace }}/.github/built_paths'
+          xargs sudo $(command -v nix) copy --to file://${{ runner.temp }}/nix-cache <'${{ github.workspace }}/.github/built_paths'
