--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,11 +24,27 @@ jobs:
         with:
           extra_nix_config: |
             extra-substituters = file://${{ runner.temp }}/nix-cache
-            post-build-hook = ${{ github.workspace }}/.github/nix-post-build-hook
             secret-key-files = ${{ runner.temp }}/nix-private-key
             trusted-public-keys = cache.nixos.org-1:6NCHdD59X431o0gWypbMrAURkbJ16ZPMQFGspcDShjY= ${{ vars.NIX_PUBLIC_KEY }}
 
-      - run: pstree -pas $(pgrep nix)
+      - name: Enable post-build-hook
+        if: steps.nix-cache.outputs.cache-hit == 'true'
+        run: |
+          printf 'post-build-hook = ${{ github.workspace }}/.github/nix-post-build-hook' \
+            | sudo tee -a /etc/nix/nix.conf >/dev/null
+
+          case '${{ runner.os }}' in
+          Linux)
+            sudo systemctl restart nix-daemon
+            ;;
+          macOS)
+            sudo launchctl stop org.nixos.nix-daemon
+            sudo launchctl start org.nixos.nix-daemon
+            ;;
+          *)
+            printf 'unknown OS: %s\n' '${{ runner.os }}' >&2
+            exit 1
+          esac
 
       - run: nix -L build
 
