--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,7 +28,7 @@ jobs:
             trusted-public-keys = cache.nixos.org-1:6NCHdD59X431o0gWypbMrAURkbJ16ZPMQFGspcDShjY= ${{ vars.NIX_PUBLIC_KEY }}
 
       - name: Enable post-build-hook
-        if: steps.nix-cache.outputs.cache-hit == 'true'
+        if: steps.nix-cache.outputs.cache-hit != 'true'
         run: |
           printf 'post-build-hook = ${{ github.workspace }}/.github/nix-post-build-hook' \
             | sudo tee -a /etc/nix/nix.conf >/dev/null
