fixup! fixup! fixup! fixup! fixup! fixup! fixup! fixup! fixup! Revert to post-build hook

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,7 +6,7 @@ jobs:
       matrix:
         os:
           - ubuntu-latest
-            # - macos-latest
+          - macos-latest
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v3
@@ -57,4 +57,4 @@ jobs:
         if: steps.nix-cache.outputs.cache-hit != 'true'
         run: |
           sudo $(command -v nix) store repair -r .
-          xargs -t sudo $(command -v nix) copy --to file://${{ runner.temp }}/nix-cache <'${{ github.workspace }}/.github/built_paths'
+          xargs sudo $(command -v nix) copy --to file://${{ runner.temp }}/nix-cache <'${{ github.workspace }}/.github/built_paths'
