fixup! fixup! fixup! fixup! fixup! fixup! fixup! fixup! fixup! fixup! fixup! fixup! Revert to post-build hook

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,7 +39,7 @@ jobs:
             sudo systemctl restart nix-daemon
             ;;
           macOS)
-            sudo launchctl kickstart -k org.nixos.nix-daemon
+            sudo launchctl kickstart -k system/org.nixos.nix-daemon
             ;;
           *)
             printf 'unknown OS: %s\n' '${{ runner.os }}' >&2
