--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,7 +15,7 @@ jobs:
         id: nix-cache
         with:
           path: ${{ runner.temp }}/nix-cache
-          key: ${{ runner.os }}-${{ hashFiles('./flake.lock', './gomod2nix.toml') }}-2
+          key: ${{ runner.os }}-${{ hashFiles('./flake.lock', './gomod2nix.toml') }}-3
 
       - name: Save signing key secret to file
         run: printf '${{ secrets.NIX_PRIVATE_KEY }}\n' >'${{ runner.temp }}/nix-private-key'
@@ -56,4 +56,7 @@ jobs:
         if: steps.nix-cache.outputs.cache-hit != 'true'
         run: |
           sudo $(command -v nix) store repair -r .
-          xargs sudo $(command -v nix) copy --to file://${{ runner.temp }}/nix-cache <'${{ github.workspace }}/.github/built_paths'
+          xargs -t sudo $(command -v nix) copy \
+            --to file://${{ runner.temp }}/nix-cache \
+            --no-recursive \
+            <'${{ github.workspace }}/.github/built_paths'
