fixup! fixup! fixup! fixup! fixup! fixup! fixup! fixup! fixup! fixup! fixup! fixup! fixup! fixup! fixup! fixup! fixup! fixup! fixup! fixup! fixup! Revert to post-build hook

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -63,10 +63,9 @@ jobs:
             TS=tsp
           fi
 
-          ps -F -C "$TS"
-          "$TS" -l | {
+          sudo "$TS" -l | {
             read -r rest
             while read -r id rest; do
-              "$TS" -c "$id"
+              sudo "$TS" -c "$id"
             done
           }
