--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,7 +15,7 @@ jobs:
         id: nix-cache
         with:
           path: ${{ runner.temp }}/nix-cache
-          key: ${{ runner.os }}-${{ hashFiles('./flake.lock', './gomod2nix.toml') }}-6
+          key: ${{ runner.os }}-${{ hashFiles('./flake.lock', './gomod2nix.toml') }}-7
 
       - name: Save signing key secret to file
         run: printf '${{ secrets.NIX_PRIVATE_KEY }}\n' >'${{ runner.temp }}/nix-private-key'
@@ -28,24 +28,6 @@ jobs:
             secret-key-files = ${{ runner.temp }}/nix-private-key
             trusted-public-keys = cache.nixos.org-1:6NCHdD59X431o0gWypbMrAURkbJ16ZPMQFGspcDShjY= ${{ vars.NIX_PUBLIC_KEY }}
 
-            # - name: Enable post-build-hook
-            #   if: steps.nix-cache.outputs.cache-hit != 'true'
-            #   run: |
-            #     printf 'post-build-hook = ${{ github.workspace }}/.github/nix-post-build-hook' \
-            #       | sudo tee -a /etc/nix/nix.conf >/dev/null
-
-            #     case '${{ runner.os }}' in
-            #     Linux)
-            #       sudo systemctl restart nix-daemon
-            #       ;;
-            #     macOS)
-            #       sudo launchctl kickstart -k system/org.nixos.nix-daemon
-            #       ;;
-            #     *)
-            #       printf 'unknown OS: %s\n' '${{ runner.os }}' >&2
-            #       exit 1
-            #     esac
-
       - run: nix -L build
 
       - name: Sanity Check
@@ -56,11 +38,11 @@ jobs:
       - name: Copy Nix dependencies to cache
         if: steps.nix-cache.outputs.cache-hit != 'true'
         run: |
-          sudo $(command -v nix) store repair -r .
-
           {
             printf '.\n'
             nix path-info -r .#packages.$(nix eval --impure --expr 'builtins.currentSystem').default.passthru.vendorEnv
-          } \
-            | xargs -t sudo $(command -v nix) copy \
+          } >'${{ runner.temp }}/packages'
+          xargs -t sudo $(command -v nix) store repair -r <'${{ runner.temp }}/packages'
+          xargs -t sudo $(command -v nix) copy \
               --to file://${{ runner.temp }}/nix-cache \
+              <'${{ runner.temp }}/packages'
